welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value i
  while (lookingFor!=nums(i) & i!=nums.length-1) {
                          ^indexOfValue:3: error: not found: value i
  while (lookingFor!=nums(i) & i!=nums.length-1) {
                               ^indexOfValue:4: error: not found: value i
    i+=1
    ^indexOfValue:5: error: not found: value i
    if (lookingFor==nums(i)) result=i
                         ^indexOfValue:5: error: not found: value i
    if (lookingFor==nums(i)) result=i
                                    ^