welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var result = -1
  while (lookingFor!=nums(i) & i!=nums.length-1) {
    i+=1
    if (lookingFor==nums(i)) result=i
  }
  return result
}